This is the same license as all of Apache, plus other open source projects such as Spring.
The intent is to make the code available to the Java community with the minimum
of restrictions. If the license cause you problems please contact the mailing list.


Incompatible changes since 1.0
------------------------------
Binary compatible - Yes
Source compatible - Yes
Serialization compatible - 95%
  - DateTime.Property, DateMidnight.Property and MutableDateTime.Property
   serialization formats have changed to fix a bug.
   Please note that this only affects the property classes, and not DateTime etc.
   It is unlikely that you serialized one of these classes


Deprecations since 1.0
----------------------
None


Bug fixes since 1.0
-------------------
- DateTimeFormat
  Parsing of two digit year by DateTimeFormat supports parsing of more or less
  than two digits, for compatibility with java.text.SimpleDateFormat. If not
  two digits or if sign character is present, then year is parsed as absolute.

- ZoneInfoCompiler
  Comment parsing bug disabled DST for Europe/Athens after 1980.

- GJChronology
  Range duration field of dayOfMonth was not consistent with monthOfYear. This
  bug manifested itself when adding/subtracting periods to partials.

- DateTimeParserBucket
  Fixed parsing date where format includes era. Era must be set and rounded
  before any other fields.

- PeriodFormatterBuilder
  Formatters that had fields which required a zero to be printed were not being
  parsed.

- DateTime.Property, DateMidnight.Property and MutableDateTime.Property
  Could previously only be serialized in UTC.
  The serialization format has been changed to be simpler and more reliable.
  Unfortunately, this was an incompatible change to the serialization format.

- DateTimeFormatterBuilder/PeriodFormatterBuilder
  Number parser would accept multiple sign characters as valid.

Enhancements since 1.0
----------------------